# Quickstart-Secure-Django-Template

./: .gitignore  LICENSE  README.md  bump-version.sh  launch_app.sh  requirements.in  requirements.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
django_project/: data.tsv  manage.py
django_project/apps/: __init__.py
django_project/apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
django_project/apps/accounts/migrations/: 0001_initial.py
django_project/apps/accounts/templates/accounts/: __base.html  login.html  users_edit.html  users_list.html
django_project/apps/api_example/: api_viewsets.py  models.py  serializers.py
django_project/apps/api_example/fixtures/: testdata.json
django_project/apps/api_example/migrations/: 0001_initial.py
django_project/apps/dashboard/: forms.py  models.py  urls.py  views.py
django_project/apps/dashboard/templates/dashboard/: __base.html  overview.html
django_project/proj/: api_authentication.py  api_viewsets.py  context_processors.py  middleware.py  models.py  serializer.py  signals.py  swagger.py  urls.py  uwsgi.ini  wsgi.py
django_project/proj/common/: error_msg_helper.py  ip_address_helper.py  oauth_helper.py  url_helper.py
django_project/proj/management/: oauth_setup.py
django_project/proj/management/commands/: admin.py
django_project/proj/settings/: appconfig.py  base.py  celery.py  local.py  production.py
django_project/proj/templatetags/: form_messages.py  smarturl.py
django_project/static/css/: dashboard.css  default-auth.css  default-noauth.css
django_project/static/js/: main.js
django_project/templates/: 404.html  500.html  __auth_base.html  __noauth_base.html
nginx/: django-app.in
systemd/: django-app.service
tests/: base_test.py  test_crypto.py  test_oauth_auth.py
